crates/review-buddy/tests/snapshots/composer__review_comment_100x30_dusk.snap
---
source: crates/review-buddy/tests/composer.rs
expression: text(& render(& mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                 Dusk
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││              @@ -10,7 +10,9 @@ use crate::app::Action;         │
│  · src/ui/menubar.rs      +8 −0││›   10   10                                                     │
│  · src/ui/mod.rs          +2 −0││    11   11   pub struct Menu {                                 │
│                                ││    12   12       items: Vec<MenuItem>,                         │
│                                ││         13 +     selected: usize,                              │
│                ╭ Submit your review ────────────────────────────────────────────╮                │
│                │ (•) 1 Comment  ( ) 2 Approve  ( ) 3 Request changes            │                │
│                │                                                                │                │
│                │ Post review with 1 comment                                     │                │
│                │ Verdict: comment                                               │>) -> Self {    │
│                │                                                                │                │
│                │ Summary (optional)                                             │                │
│                │ ▏                                                              │                │
│                │ ▏                                                              │                │
│                │ ▏                                                              │                │
│                │                                                                │{               │
│                │ • menus.rs line 51 · Fewer branches this way:                  │                │
│                │                                                                │                │
│                │   Cancel    › Post review ‹   ⏎ choose · esc cancel            │                │
│                ╰────────────────────────────────────────────────────────────────╯cted + 1) % sel…│
│ Your review · pending ─────────││              ╭─ thread · line 44 ─────────────────────────────╮│
│1 suggestion · 0 comments       ││              │ jo · 1d                                        ││
│0 of 3 files viewed             ││              │ Should this wrap round to the first item? Most ││
│Your review: not started        ││              │ menus I use stop at the end.                   ││
│Choosing: comment               ││              │ ada · 20h                                      ││
│                                ││              │ I went with wrapping so a held key never gets  ││
╰────────────────────────────────╯╰ hunk 1 of 3 · file 1 of 3 ─────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  a approve  R submit a review  o open  y copy
